Small addition to Header

--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,6 @@
 <head>
 	<title> Hello Coursera's First example</title>
 	<body>
-<h1>Hello Coursera!</h1>
+<h1>Hello Coursera! - Great Course</h1>
 	</body>
 </html>
